--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
       - .env
     volumes:
       - db-data:/var/lib/mysql
-      - ./wiki_schema.sql:/docker-entrypoint-initdb.d/wiki_schema.sql:ro
+      - ./gb_api_db_init:/docker-entrypoint-initdb.d
     healthcheck:
       test: "mariadb -uroot -p$MARIADB_ROOT_PASSWORD $MARIADB_DATABASE -e 'SHOW DATABASES;'"
       interval: 5s
