gzip sql scripts

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,11 @@ services:
       - .env
     volumes:
       - db-data:/var/lib/mysql
-      # Uncomment this line to load data into the maintenance api dumb db
+
+      # Loads database schema into maintenane api dump db
+      - ./gb_api_db_init/00_wiki_schema.sql:/docker-entrypoint-initdb.d/00_wiki_schema.sql:ro
+
+      # Uncomment this line to load data into the maintenance api dump db
       # - ./gb_api_db_init:/docker-entrypoint-initdb.d
     healthcheck:
       test: "mariadb -uroot -p$MARIADB_ROOT_PASSWORD $MARIADB_DATABASE -e 'SHOW DATABASES;'"
