--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,8 @@ services:
       # Loads database schema into maintenane api dump db
       - ./gb_api_db_init/00_wiki_schema.sql:/docker-entrypoint-initdb.d/00_wiki_schema.sql:ro
 
-      # Uncomment this line to load data into the maintenance api dump db
+      # Uncomment the below line to load data into the maintenance api dump db AND set interval to 30s for the data
+      #   to fully load and open the connection for the wiki init
       # - ./gb_api_db_init:/docker-entrypoint-initdb.d
     healthcheck:
       test: "mariadb -uroot -p$MARIADB_ROOT_PASSWORD $MARIADB_DATABASE -e 'SHOW DATABASES;'"
