--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,6 @@
+# These credentials are for your local db. The accounts can be changed
+# at your discretion. In the future, these values will be in a secrets vault.
+# The GB_API_KEY can be retrieved by visiting giantbomb.com/api while logged in.
 MARIADB_DATABASE=gb_wiki
 MARIADB_API_DUMP_DATABASE=gb_api_dump
 MARIADB_USER=wiki_admin
