feat: mount gcs bucket for images (#36)
* mount gcs bucket for images

* split docker compose into dev and prod

* remove unused lines

* ran npx prettier

* increase healthcheck time

* disable script execution in images folder

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@ node_modules/
 images/
 cache/
 logs/
+mountpoint/
 gb_api_scripts/images/
 
 .idea/
@@ -10,4 +11,5 @@ gb_api_scripts/images/
 !.vscode/settings.json
 !.vscode/extensions.json
 .DS_Store
+gcs_key.json
 .env
