--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,11 @@ services:
       retries: 5
 
   wiki:
-    build: .
+    build:
+      context: .
+      args:
+        INSTALL_API: "false"
+        INSTALL_GCSFUSE: "false"
     env_file:
       - .env
     depends_on:
@@ -30,6 +34,8 @@ services:
       - ./data:/data/
       - wiki-data:/var/www/html/images
       - ./entrypoint.sh:/entrypoint.sh:ro
+    environment:
+      - MV_ENV=dev
     entrypoint: ["/entrypoint.sh"]
 
 volumes:
