--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "devDependencies": {
     "cypress": "^14.5.2",
+    "husky": "^9.1.7",
     "prettier": "^3.6.2",
     "typescript": "^5.8.3"
   },
   "scripts": {
-    "format": "pnpm prettier --write --config .prettierrc 'README.md|(skins|cypress|.github)/**/*.{js,json,ts,yaml}'",
-    "format:check": "pnpm prettier --check --config .prettierrc 'README.md|(skins|cypress|.github)/**/*.{js,json,ts,yaml}'"
+    "format": "pnpm prettier --write --config .prettierrc 'README.md|(skins|cypress|.github)/**/*.{js,json,ts,yaml}|*.json|*.yaml'",
+    "format:check": "pnpm prettier --check --config .prettierrc 'README.md|(skins|cypress|.github)/**/*.{js,json,ts,yaml}|*.json|*.yaml'"
   }
 }
