Load shared header on GiantBomb skin

--- a/.env.example
+++ b/.env.example
@@ -23,3 +23,4 @@ EXTERNAL_DB_PASSWORD=BYPASS.takes.prove.solved.slaying.locket
 EXTERNAL_DB_NAME=gb_api_dump
 MW_UK=f1613d0afefb6314
 GB_API_KEY=YOUR_API_KEY_HERE
+GB_SITE_SERVER=http://localhost:3000
